[BUGFIX] Fix event content overlapping navbar text

--- a/local_packages/football/Resources/Private/Scss/Elements/_events.scss
+++ b/local_packages/football/Resources/Private/Scss/Elements/_events.scss
@@ -12,7 +12,6 @@
         position: absolute;
         bottom: toRem(30);
         left: toRem(20);
-        z-index: 3;
     }
 
     &--title, &--button {
